# shadowsocksrr-rust

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: cross-build.yml
src/: common.rs  config.rs  crypto.rs  main.rs  server.rs  state.rs  udp_relay.rs
src/obfs/: mod.rs  tls12_ticket_auth.rs
src/protocol/: auth_akarin.rs  auth_chain.rs  mod.rs  udp.rs
